# video-editor-light

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
design/: video-editor-light.pen
docs/adr/: 0001-pyqt-borders-use-painter-not-css.md  0002-pyqt-icon-buttons-use-qlabel-not-qpushbutton.md  0003-pyqt-explicit-background-in-painted-parents.md  0004-pyqt-layout-overflow-qlabel-sizehint.md  0005-pyqt-stylesheet-cascade-use-type-selectors.md
specs/: vacation_video_editor_spec.docx
tests/: conftest.py
tests/unit/gui/: test_annotation_controller.py  test_annotation_widgets.py  test_composition_controller.py  test_timeline_widget.py
tests/unit/models/: test_models.py
tests/unit/services/: test_local_annotation_store.py  test_local_video_storage.py
tests/unit/utils/: test_providers.py
vacation_editor/: __main__.py  config.py
vacation_editor/gui/: main_window.py  theme.py
vacation_editor/gui/annotation/: controller.py  file_browser.py  mark_bar.py  section_list.py  tab.py  timeline_widget.py  transport_bar.py  video_player.py
vacation_editor/gui/composition/: controller.py  export_dialog.py  preview_dialog.py  section_library.py  sequence_track.py  tab.py  transition_picker.py
vacation_editor/models/: annotation.py  clip.py  composition.py  job.py
vacation_editor/services/: ffmpeg.py  ffprobe.py
vacation_editor/services/cloud/: annotation_store.py  composition_processor.py  video_storage.py
vacation_editor/services/local/: annotation_store.py  (+2 more)
vacation_editor/utils/: paths.py  providers.py  validators.py
(+3 files in other folders)
