[project]
name = "vacation-editor"
version = "0.1.0"
description = "A macOS desktop app for creating polished vacation videos from DJI drone clips"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6",
    "pydantic>=2.5",
    "ffmpeg-python>=0.2",
]

[project.optional-dependencies]
music = [
    "librosa>=0.10",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
vacation-editor = "vacation_editor.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vacation_editor*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vacation_editor --cov-report=term-missing"

[tool.uv]
python-preference = "only-system"   # use asdf-managed Python, not uv's own
